Increase version number and update email

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,10 +6,10 @@ build-backend = "setuptools.build_meta"
 name = "mypyutils"
 description = "A collection of Python helpers."
 readme = "README.md"
-version = "0.1.1"
+version = "1.0.0"
 license = {file = "LICENSE"}
 authors = [
-	{name = "Christoph M. Konrad", email = "c.m.schmidt@tudelft.nl"}
+	{name = "Christoph M. Konrad", email = "c.m.konrad@tudelft.nl"}
 ]
 requires-python = ">3.11"
 dependencies = [
